<resources>
    <string name="app_name">Quiz Adder</string>
    <string name="squiz">sQUIZ</string>
    <string name="s">S</string>
    <string name="make_a_squiz">make a sQUIZ:</string>
    <string name="option_1">option 1:</string>
    <string name="option_4">option 4:</string>
    <string name="option_2">option 2:</string>
    <string name="e_g_jimmy">e.g. jimmy</string>
    <string name="option_3">option 3:</string>
    <string name="e_g_annie">e.g. annie</string>
    <string name="e_g_sheri">e.g. sheri</string>
    <string name="create_squiz">create sQUIZ</string>
    <string name="see_question_s">see question(s)</string>
    <string name="add_question">add question</string>
    <string name="_0">0</string>
    <string name="question">question:</string>
    <string name="dummy_question">e.g. who is izumi uchiha?</string>
    <string name="create">create</string>
    <string name="this_is_the_answer">this is the answer</string>
    <string name="no_squiz_yet">no sQUIZ yet\npress the \'+\' button to add one.</string>
    <string name="add_a_squiz">add a sQUIZ</string>
    <string name="sign_in_with_google">sign in with Google</string>
</resources>