<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:padding="0dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bontserrat_bold"
        android:text="@string/squiz"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_create_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/button_create_quiz"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="37dp"
        android:layout_height="37dp"
        app:cardCornerRadius="1000dp"
        app:cardElevation="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/bontserrat_bold"
            android:gravity="center"
            android:rotation="-45"
            android:text="@string/s"
            android:textColor="@color/black"
            android:visibility="visible"
            app:autoSizeTextType="uniform" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="44dp"
        android:layout_marginRight="17dp"
        android:padding="17dp"
        android:background="@drawable/rounded_stroked_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create_quiz">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/bontserrat_bold"
            android:text="@string/make_a_squiz_id"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/bontserrat_bold"
            android:text="@string/question"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/edit_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:ems="10"
            android:drawableStart="@drawable/question_mark"
            android:drawablePadding="11dp"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/dummy_question"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/text_question"
            app:layout_constraintTop_toBottomOf="@+id/text_question" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/bontserrat_bold"
            android:text="@string/option_1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_question" />

        <EditText
            android:id="@+id/edit_option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:drawableStart="@drawable/option_1"
            android:drawablePadding="11dp"
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/e_g_sheri"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/bontserrat_bold"
            android:text="@string/option_2"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_option1" />

        <EditText
            android:id="@+id/edit_option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:drawableStart="@drawable/option_2"
            android:drawablePadding="11dp"
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/e_g_jimmy"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/edit_option1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bontserrat_bold"
            android:text="@string/option_3"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edit_option2"
            app:layout_constraintTop_toBottomOf="@+id/edit_option2" />

        <EditText
            android:id="@+id/edit_option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:drawableStart="@drawable/option_3"
            android:drawablePadding="11dp"
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/e_g_annie"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/edit_option2"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bontserrat_bold"
            android:text="@string/option_4"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edit_option3"
            app:layout_constraintTop_toBottomOf="@+id/edit_option3" />

        <EditText
            android:id="@+id/edit_option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:drawableStart="@drawable/option_4"
            android:drawablePadding="11dp"
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/e_g_sheri"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/add_question"
        android:src="@drawable/ic_baseline_add_24"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout_2"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_2"
        app:layout_constraintVertical_bias="0.983"
        app:tint="@color/white" />

    <Button
        android:id="@+id/button_create_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:fontFamily="@font/montserrat_medium"
        android:includeFontPadding="false"
        android:text="@string/create_squiz"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_see_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/see_question_s"
        android:textColor="@color/black"
        android:visibility="gone"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/fab_add_question"
        app:layout_constraintEnd_toStartOf="@+id/fab_add_question"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout_2" />

    <TextView
        android:id="@+id/text_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        android:text="@string/_0"
        android:textStyle="bold"
        android:textColor="#ff0000"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_see_questions"
        app:layout_constraintStart_toEndOf="@+id/text_see_questions" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fab_add_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="11dp"
        app:circularflow_radiusInDP="11dp"
        app:cardCornerRadius="11dp"
        app:cardElevation="7dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/button_create_quiz" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>