<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuizList">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bontserrat_bold"
        android:text="@string/squiz"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@id/cardView"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_margin="11dp"
        app:cardCornerRadius="1000dp"
        app:cardElevation="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/bontserrat_bold"
            android:gravity="center"
            android:rotation="-45"
            android:text="@string/s"
            android:textColor="@color/black"
            android:visibility="visible"
            app:autoSizeTextType="uniform" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_a_sQUIZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="11dp"
        app:layout_constraintVertical_bias="1.0"
        app:tint="@color/white"
        android:contentDescription="@string/add_a_squiz" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="7dp"
        android:fontFamily="@font/bontserrat_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/no_squiz_yet"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/sad"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="@id/recyclerView"
        app:layout_constraintStart_toStartOf="@+id/recyclerView"
        app:layout_constraintTop_toTopOf="@+id/recyclerView" />


</androidx.constraintlayout.widget.ConstraintLayout>